slight changes made to HTML pages used for authentication

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="static/styles.css">
     <title>Login</title>
 </head>
-<body>
-
-        <h1>Login Page</h1>
-        <p><a href="/weblogin">Login</a></p>
+<body> 
+        <h1>Shipping Port Authentication Page</h1>
+        <h4>To use this API, you must authenticate through Auth0 with either an Auth0 or Google account. 
+            Authenticating with a Google account shares the name, email address, language preferences, and profile picture 
+            associated with a account to Auth0.
+        </h4>
+        <p><a href="/weblogin">Click here to authenticate with Shipping Port</a></p>
 
 </body>
 </html>
