small format change

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 </head>
 <body> 
         <h1>Shipping Port Authentication Page</h1>
-        <h4>To use this API, you must authenticate through Auth0 with either an Auth0 account or Google account.
+        <h4>
+            To use this API, you must authenticate through Auth0 with either an Auth0 account or Google account.
         <br> 
             Authenticating with a Google account shares the name, email address, language preferences, and profile picture 
             associated with the account to Auth0.
